# ChangeLog for media-video/mplayer2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Apr 2013; Nikoli <nikoli@lavabit.com> -mplayer2-2.0_p20120828.ebuild,
  mplayer2-2.0_p20130126.ebuild, mplayer2-9999.ebuild, metadata.xml:
  update cdio dep, remove old

  11 Mar 2013; Nikoli <nikoli@lavabit.com> mplayer2-9999.ebuild:
  update libav dep

*mplayer2-2.0_p20130126 (31 Jan 2013)

  31 Jan 2013; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20130126.ebuild:
  new snapshot

  28 Jan 2013; Nikoli <nikoli@lavabit.com> -mplayer2-2.0_p20120517.ebuild,
  -mplayer2-2.0_p20120815.ebuild, -mplayer2-2.0_p20121103.ebuild,
  -mplayer2-2.0_p20121108.ebuild, mplayer2-9999.ebuild:
  upstream cleaned configure, remove old

  26 Dec 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20121128.ebuild,
  mplayer2-9999.ebuild:
  verbose build, bgo#448196

*mplayer2-2.0_p20121128 (01 Dec 2012)

  01 Dec 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20121108.ebuild,
  +mplayer2-2.0_p20121128.ebuild, mplayer2-9999.ebuild:
  version bump, rst2man is fixed upstream, docs work fine with -j 9 now,
  translation were removed

  12 Nov 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20121108.ebuild,
  mplayer2-9999.ebuild:
  set quvi dep, remove ggi

*mplayer2-2.0_p20121108 (11 Nov 2012)

  11 Nov 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20121108.ebuild,
  mplayer2-9999.ebuild:
  new snapshot, sync with portage

*mplayer2-2.0_p20121103 (07 Nov 2012)

  07 Nov 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20121103.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  new snapshot, add USE lcms, vcd and yuv4mpeg

  28 Sep 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120828.ebuild,
  mplayer2-9999.ebuild:
  require python 2.7, not just 2.6 (bug #434356)

  05 Sep 2012; Nikoli <nikoli@lavabit.com> files/mplayer2-py2compat.patch,
  mplayer2-2.0_p20120828.ebuild, mplayer2-9999.ebuild:
  fix py3 support
