@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Apr 2013; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20130126.ebuild,
+  mplayer2-9999.ebuild:
+  migrate to python-r1 eclasses, cosmetics
+
   16 Apr 2013; Nikoli <nikoli@lavabit.com> -mplayer2-2.0_p20120828.ebuild,
   mplayer2-2.0_p20130126.ebuild, mplayer2-9999.ebuild, metadata.xml:
   update cdio dep, remove old
